--- a/main.html
+++ b/main.html
@@ -557,7 +557,8 @@
       
       <div class="nav-links" id="navLinks">
         <a href="#home">Home</a>
-        <a href="#pair">Pair Bot</a>
+        <a href="/pair">Pair Bot</a>
+        <a href="/qr">Scan Bot</a>
         <a href="#about">About Bot</a>
         <a href="#deploy">Deploy</a>
         <a href="#contact">Contact</a>
@@ -576,8 +577,12 @@
         AI chat, games, tools, and much more. Completely free and open source.
       </p>
       <div class="hero-buttons">
-        <a href="#pair" class="btn btn-primary">
+        <a href="/pair" class="btn btn-primary">
           <i class="fas fa-link"></i> Pair Now
+        </a>
+       <div class="hero-buttons">
+        <a href="/qr" class="btn btn-primary">
+          <i class="fas fa-qr"></i> Scan now
         </a>
         <a href="#deploy" class="btn btn-secondary">
           <i class="fas fa-cloud-upload-alt"></i> Deploy Your Own
